--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "OTkzNDQ4Mjg3MTg3MjQzMDM4.GTVdgF.SwtVH0jsEYU4QLB9v7f2xOjoOgWqn15hMjqkyk",
+    "token": "",
     "prefix": "$",
     "status": "Dev by Prometheus",
     "suburl": {},
